riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_async_function_with_multiple_params.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_function(&func, \"riff\")"
---
public func uploadFile(path: String, to destination: String) async throws -> String {
    let futureHandle = path.withCString { pathPtr in destination.withCString { destinationPtr in riff_upload_file_start(UnsafeRawPointer(pathPtr).assumingMemoryBound(to: UInt8.self), UInt(path.utf8.count), UnsafeRawPointer(destinationPtr).assumingMemoryBound(to: UInt8.self), UInt(destination.utf8.count)) } }

    typealias FutureContext = FfiFutureState<String>
    let state = FutureContext(handle: futureHandle)

    return try await withTaskCancellationHandler {
        try await withCheckedThrowingContinuation { continuation in
            guard state.installContinuation(continuation) else {
                continuation.resume(throwing: CancellationError())
                return
            }

            func poll(ctx: FutureContext) {
                guard ctx.canPoll() else { return }
                riff_upload_file_poll(ctx.handle, UInt64(UInt(bitPattern: Unmanaged.passRetained(ctx).toOpaque()))) { callbackData, pollResult in
                    let ctx = Unmanaged<FutureContext>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(callbackData))!).takeRetainedValue()
                    if pollResult == 0 {
                        let decision = ctx.decideFinish()
                        if case .alreadyFinished = decision { return }
                        var status = FfiStatus()
                        let buf = riff_upload_file_complete(ctx.handle, &status)
                        riff_upload_file_free(ctx.handle)
                        switch decision {
                        case .finishWithContinuation(let continuation):
                            if status.code != 0 {
                                riff_free_buf_u8(buf)
                                continuation.resume(throwing: FfiError(message: "ffi call failed"))
                            } else {
                                let value = riffDecodeOwnedBuf(buf.ptr, Int(buf.len)) { reader in reader.readString() }
                                riff_free_buf_u8(buf)
                                continuation.resume(returning: value)
                            }
                        case .finishWithoutContinuation:
                            riff_free_buf_u8(buf)
                        case .alreadyFinished:
                            break
                        }
                    } else {
                        guard ctx.canPoll() else { return }
                        Task { [ctx] in
                            await Task.yield()
                            poll(ctx: ctx)
                        }
                    }
                }
            }
            poll(ctx: state)
        }
    } onCancel: {
        let decision = state.decideFinish()
        switch decision {
        case .alreadyFinished:
            break
        case .finishWithoutContinuation:
            riff_upload_file_cancel(state.handle)
            riff_upload_file_free(state.handle)
        case .finishWithContinuation(let continuation):
            riff_upload_file_cancel(state.handle)
            riff_upload_file_free(state.handle)
            continuation.resume(throwing: CancellationError())
        }
    }
}
