riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_blittable_point.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: render_record(&record)
---
public struct Point: Hashable, Equatable, Sendable {
    public var x: Double
    public var y: Double

    public init(x: Double, y: Double) {
        self.x = x
        self.y = y
    }

}

extension Point: WireCodable {
    @inlinable static func decode(from reader: inout WireReader) -> Point { reader.readBlittable() }
    @inlinable func encode(to writer: inout WireWriter) { writer.writeBlittable(self) }
}
