riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_c_style_enum.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: render_enum(&e)
---
public enum Status: Int32, Hashable, Sendable, CaseIterable {
    case active = 0
    case inactive = 1
    case pending = 2

    @usableFromInline init(fromC c: Int32) { self = Status(rawValue: c)! }
    @usableFromInline var cValue: Int32 { rawValue }

}

extension Status: WireCodable {
    @inlinable static func decode(from reader: inout WireReader) -> Status { Status(rawValue: reader.readI32())! }
    @inlinable func encode(to writer: inout WireWriter) { writer.writeI32(rawValue) }
}
