riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_c_style_error_enum.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: render_enum(&e)
---
public enum ApiError: Int32, Hashable, Sendable, CaseIterable, Error {
    case notFound = 0
    case unauthorized = 1
    case serverError = 2

    @usableFromInline init(fromC c: Int32) { self = ApiError(rawValue: c)! }
    @usableFromInline var cValue: Int32 { rawValue }

}

extension ApiError: WireCodable {
    @inlinable static func decode(from reader: inout WireReader) -> ApiError { ApiError(rawValue: reader.readI32())! }
    @inlinable func encode(to writer: inout WireWriter) { writer.writeI32(rawValue) }
}
