riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_class_with_constructor_and_method.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_class(&cls, \"riff\")"
---
public final class Database {
    let handle: OpaquePointer

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    public init(path: String) {
        let ptr = path.withCString { pathPtr -> OpaquePointer? in riff_database_open(UnsafeRawPointer(pathPtr).assumingMemoryBound(to: UInt8.self), UInt(path.utf8.count)) }!
        self.handle = ptr
    }

    deinit {
        riff_database_free(handle)
    }

    public func query(sql: String) -> String {
        return sql.withCString { sqlPtr in
            let buf = riff_database_query(handle, UnsafeRawPointer(sqlPtr).assumingMemoryBound(to: UInt8.self), UInt(sql.utf8.count))
            defer { riff_free_buf_u8(buf) }
            return riffDecodeOwnedBuf(buf.ptr, Int(buf.len)) { reader in reader.readString() }
        }
    }

}
