riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_encoded_record_with_string.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: render_record(&record)
---
public struct User: Hashable, Equatable, Sendable {
    public var id: Int64
    public var name: String

    public init(id: Int64, name: String) {
        self.id = id
        self.name = name
    }

    @inlinable static func decode(wireBuffer wire: WireBuffer, at offset: Int) -> (value: User, size: Int) {
        var pos = offset
        let id_v = { let v = wire.readI64(at: pos); pos += 8; return v }()
        let name_v = { let (v, s) = wire.readString(at: pos); pos += s; return v }()
        return (User(id: id_v, name: name_v), pos - offset)
    }
}

extension User: WireEncodable {
    @usableFromInline static var isBlittable: Bool { false }
    @inlinable func wireEncodedSize() -> Int {
        var size = 0
        size += 8
        size += (4 + name.utf8.count)
        return size
    }
    @inlinable func wireEncodeTo(_ data: inout Data) {
        data.appendI64(id)
        data.appendString(name)
    }
    @inlinable func wireEncodeToBytes(_ bytes: inout [UInt8]) {
        bytes.appendI64(id)
        bytes.appendString(name)
    }
}
